tests/ui/associated-types/hr-associated-type-bound-param-3.stderr
error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-3.rs:13:14
   |
LL |     type U = str;
   |              ^^^ the trait `Clone` is not implemented for `str`
   |
   = help: the trait `Clone` is implemented for `String`
note: required by a bound in `X`
  --> $DIR/hr-associated-type-bound-param-3.rs:4:33
   |
LL | trait X<'a, T>
   |       - required by a bound in this trait
...
LL |     for<'b> <T as X<'b, T>>::U: Clone,
   |                                 ^^^^^ required by this bound in `X`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
